// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build ramp 1`] = `
Array [
  Object {
    "b": 0,
    "g": 0,
    "r": 255,
  },
  Object {
    "b": 255,
    "g": 0,
    "r": 0,
  },
]
`;

exports[`grayscale ramp html 1`] = `
Array [
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 1,
    "g": 1,
    "r": 1,
  },
  Object {
    "b": 3,
    "g": 3,
    "r": 3,
  },
  Object {
    "b": 5,
    "g": 5,
    "r": 5,
  },
  Object {
    "b": 6,
    "g": 6,
    "r": 6,
  },
  Object {
    "b": 8,
    "g": 8,
    "r": 8,
  },
  Object {
    "b": 10,
    "g": 10,
    "r": 10,
  },
  Object {
    "b": 11,
    "g": 11,
    "r": 11,
  },
  Object {
    "b": 13,
    "g": 13,
    "r": 13,
  },
  Object {
    "b": 14,
    "g": 14,
    "r": 14,
  },
  Object {
    "b": 15,
    "g": 15,
    "r": 15,
  },
  Object {
    "b": 17,
    "g": 17,
    "r": 17,
  },
  Object {
    "b": 18,
    "g": 18,
    "r": 18,
  },
  Object {
    "b": 19,
    "g": 19,
    "r": 19,
  },
  Object {
    "b": 20,
    "g": 20,
    "r": 20,
  },
  Object {
    "b": 21,
    "g": 21,
    "r": 21,
  },
  Object {
    "b": 22,
    "g": 22,
    "r": 22,
  },
  Object {
    "b": 23,
    "g": 23,
    "r": 23,
  },
  Object {
    "b": 24,
    "g": 24,
    "r": 24,
  },
  Object {
    "b": 25,
    "g": 25,
    "r": 25,
  },
  Object {
    "b": 26,
    "g": 26,
    "r": 26,
  },
  Object {
    "b": 26,
    "g": 26,
    "r": 26,
  },
  Object {
    "b": 27,
    "g": 27,
    "r": 27,
  },
  Object {
    "b": 28,
    "g": 28,
    "r": 28,
  },
  Object {
    "b": 29,
    "g": 29,
    "r": 29,
  },
  Object {
    "b": 30,
    "g": 30,
    "r": 30,
  },
  Object {
    "b": 31,
    "g": 31,
    "r": 31,
  },
  Object {
    "b": 32,
    "g": 32,
    "r": 32,
  },
  Object {
    "b": 33,
    "g": 33,
    "r": 33,
  },
  Object {
    "b": 34,
    "g": 34,
    "r": 34,
  },
  Object {
    "b": 35,
    "g": 35,
    "r": 35,
  },
  Object {
    "b": 36,
    "g": 36,
    "r": 36,
  },
  Object {
    "b": 37,
    "g": 37,
    "r": 37,
  },
  Object {
    "b": 38,
    "g": 38,
    "r": 38,
  },
  Object {
    "b": 38,
    "g": 38,
    "r": 38,
  },
  Object {
    "b": 39,
    "g": 39,
    "r": 39,
  },
  Object {
    "b": 40,
    "g": 40,
    "r": 40,
  },
  Object {
    "b": 41,
    "g": 41,
    "r": 41,
  },
  Object {
    "b": 42,
    "g": 42,
    "r": 42,
  },
  Object {
    "b": 43,
    "g": 43,
    "r": 43,
  },
  Object {
    "b": 44,
    "g": 44,
    "r": 44,
  },
  Object {
    "b": 45,
    "g": 45,
    "r": 45,
  },
  Object {
    "b": 46,
    "g": 46,
    "r": 46,
  },
  Object {
    "b": 47,
    "g": 47,
    "r": 47,
  },
  Object {
    "b": 48,
    "g": 48,
    "r": 48,
  },
  Object {
    "b": 49,
    "g": 49,
    "r": 49,
  },
  Object {
    "b": 50,
    "g": 50,
    "r": 50,
  },
  Object {
    "b": 51,
    "g": 51,
    "r": 51,
  },
  Object {
    "b": 52,
    "g": 52,
    "r": 52,
  },
  Object {
    "b": 53,
    "g": 53,
    "r": 53,
  },
  Object {
    "b": 54,
    "g": 54,
    "r": 54,
  },
  Object {
    "b": 55,
    "g": 55,
    "r": 55,
  },
  Object {
    "b": 56,
    "g": 56,
    "r": 56,
  },
  Object {
    "b": 57,
    "g": 57,
    "r": 57,
  },
  Object {
    "b": 58,
    "g": 58,
    "r": 58,
  },
  Object {
    "b": 59,
    "g": 59,
    "r": 59,
  },
  Object {
    "b": 60,
    "g": 60,
    "r": 60,
  },
  Object {
    "b": 61,
    "g": 61,
    "r": 61,
  },
  Object {
    "b": 62,
    "g": 62,
    "r": 62,
  },
  Object {
    "b": 63,
    "g": 63,
    "r": 63,
  },
  Object {
    "b": 64,
    "g": 64,
    "r": 64,
  },
  Object {
    "b": 65,
    "g": 65,
    "r": 65,
  },
  Object {
    "b": 66,
    "g": 66,
    "r": 66,
  },
  Object {
    "b": 67,
    "g": 67,
    "r": 67,
  },
  Object {
    "b": 68,
    "g": 68,
    "r": 68,
  },
  Object {
    "b": 69,
    "g": 69,
    "r": 69,
  },
  Object {
    "b": 71,
    "g": 71,
    "r": 71,
  },
  Object {
    "b": 72,
    "g": 72,
    "r": 72,
  },
  Object {
    "b": 73,
    "g": 73,
    "r": 73,
  },
  Object {
    "b": 74,
    "g": 74,
    "r": 74,
  },
  Object {
    "b": 75,
    "g": 75,
    "r": 75,
  },
  Object {
    "b": 76,
    "g": 76,
    "r": 76,
  },
  Object {
    "b": 77,
    "g": 77,
    "r": 77,
  },
  Object {
    "b": 78,
    "g": 78,
    "r": 78,
  },
  Object {
    "b": 79,
    "g": 79,
    "r": 79,
  },
  Object {
    "b": 80,
    "g": 80,
    "r": 80,
  },
  Object {
    "b": 81,
    "g": 81,
    "r": 81,
  },
  Object {
    "b": 82,
    "g": 82,
    "r": 82,
  },
  Object {
    "b": 83,
    "g": 83,
    "r": 83,
  },
  Object {
    "b": 84,
    "g": 84,
    "r": 84,
  },
  Object {
    "b": 85,
    "g": 85,
    "r": 85,
  },
  Object {
    "b": 86,
    "g": 86,
    "r": 86,
  },
  Object {
    "b": 88,
    "g": 88,
    "r": 88,
  },
  Object {
    "b": 89,
    "g": 89,
    "r": 89,
  },
  Object {
    "b": 90,
    "g": 90,
    "r": 90,
  },
  Object {
    "b": 91,
    "g": 91,
    "r": 91,
  },
  Object {
    "b": 92,
    "g": 92,
    "r": 92,
  },
  Object {
    "b": 93,
    "g": 93,
    "r": 93,
  },
  Object {
    "b": 94,
    "g": 94,
    "r": 94,
  },
  Object {
    "b": 95,
    "g": 95,
    "r": 95,
  },
  Object {
    "b": 96,
    "g": 96,
    "r": 96,
  },
  Object {
    "b": 97,
    "g": 97,
    "r": 97,
  },
  Object {
    "b": 99,
    "g": 99,
    "r": 99,
  },
  Object {
    "b": 100,
    "g": 100,
    "r": 100,
  },
  Object {
    "b": 101,
    "g": 101,
    "r": 101,
  },
  Object {
    "b": 102,
    "g": 102,
    "r": 102,
  },
  Object {
    "b": 103,
    "g": 103,
    "r": 103,
  },
  Object {
    "b": 104,
    "g": 104,
    "r": 104,
  },
  Object {
    "b": 105,
    "g": 105,
    "r": 105,
  },
  Object {
    "b": 106,
    "g": 106,
    "r": 106,
  },
  Object {
    "b": 107,
    "g": 107,
    "r": 107,
  },
  Object {
    "b": 109,
    "g": 109,
    "r": 109,
  },
  Object {
    "b": 110,
    "g": 110,
    "r": 110,
  },
  Object {
    "b": 111,
    "g": 111,
    "r": 111,
  },
  Object {
    "b": 112,
    "g": 112,
    "r": 112,
  },
  Object {
    "b": 113,
    "g": 113,
    "r": 113,
  },
  Object {
    "b": 114,
    "g": 114,
    "r": 114,
  },
  Object {
    "b": 115,
    "g": 115,
    "r": 115,
  },
  Object {
    "b": 117,
    "g": 117,
    "r": 117,
  },
  Object {
    "b": 118,
    "g": 118,
    "r": 118,
  },
  Object {
    "b": 119,
    "g": 119,
    "r": 119,
  },
  Object {
    "b": 120,
    "g": 120,
    "r": 120,
  },
  Object {
    "b": 121,
    "g": 121,
    "r": 121,
  },
  Object {
    "b": 122,
    "g": 122,
    "r": 122,
  },
  Object {
    "b": 123,
    "g": 123,
    "r": 123,
  },
  Object {
    "b": 125,
    "g": 125,
    "r": 125,
  },
  Object {
    "b": 126,
    "g": 126,
    "r": 126,
  },
  Object {
    "b": 127,
    "g": 127,
    "r": 127,
  },
  Object {
    "b": 128,
    "g": 128,
    "r": 128,
  },
  Object {
    "b": 129,
    "g": 129,
    "r": 129,
  },
  Object {
    "b": 130,
    "g": 130,
    "r": 130,
  },
  Object {
    "b": 132,
    "g": 132,
    "r": 132,
  },
  Object {
    "b": 133,
    "g": 133,
    "r": 133,
  },
  Object {
    "b": 134,
    "g": 134,
    "r": 134,
  },
  Object {
    "b": 135,
    "g": 135,
    "r": 135,
  },
  Object {
    "b": 136,
    "g": 136,
    "r": 136,
  },
  Object {
    "b": 137,
    "g": 137,
    "r": 137,
  },
  Object {
    "b": 139,
    "g": 139,
    "r": 139,
  },
  Object {
    "b": 140,
    "g": 140,
    "r": 140,
  },
  Object {
    "b": 141,
    "g": 141,
    "r": 141,
  },
  Object {
    "b": 142,
    "g": 142,
    "r": 142,
  },
  Object {
    "b": 143,
    "g": 143,
    "r": 143,
  },
  Object {
    "b": 144,
    "g": 144,
    "r": 144,
  },
  Object {
    "b": 146,
    "g": 146,
    "r": 146,
  },
  Object {
    "b": 147,
    "g": 147,
    "r": 147,
  },
  Object {
    "b": 148,
    "g": 148,
    "r": 148,
  },
  Object {
    "b": 149,
    "g": 149,
    "r": 149,
  },
  Object {
    "b": 150,
    "g": 150,
    "r": 150,
  },
  Object {
    "b": 152,
    "g": 152,
    "r": 152,
  },
  Object {
    "b": 153,
    "g": 153,
    "r": 153,
  },
  Object {
    "b": 154,
    "g": 154,
    "r": 154,
  },
  Object {
    "b": 155,
    "g": 155,
    "r": 155,
  },
  Object {
    "b": 156,
    "g": 156,
    "r": 156,
  },
  Object {
    "b": 158,
    "g": 158,
    "r": 158,
  },
  Object {
    "b": 159,
    "g": 159,
    "r": 159,
  },
  Object {
    "b": 160,
    "g": 160,
    "r": 160,
  },
  Object {
    "b": 161,
    "g": 161,
    "r": 161,
  },
  Object {
    "b": 162,
    "g": 162,
    "r": 162,
  },
  Object {
    "b": 164,
    "g": 164,
    "r": 164,
  },
  Object {
    "b": 165,
    "g": 165,
    "r": 165,
  },
  Object {
    "b": 166,
    "g": 166,
    "r": 166,
  },
  Object {
    "b": 167,
    "g": 167,
    "r": 167,
  },
  Object {
    "b": 169,
    "g": 169,
    "r": 169,
  },
  Object {
    "b": 170,
    "g": 170,
    "r": 170,
  },
  Object {
    "b": 171,
    "g": 171,
    "r": 171,
  },
  Object {
    "b": 172,
    "g": 172,
    "r": 172,
  },
  Object {
    "b": 173,
    "g": 173,
    "r": 173,
  },
  Object {
    "b": 175,
    "g": 175,
    "r": 175,
  },
  Object {
    "b": 176,
    "g": 176,
    "r": 176,
  },
  Object {
    "b": 177,
    "g": 177,
    "r": 177,
  },
  Object {
    "b": 178,
    "g": 178,
    "r": 178,
  },
  Object {
    "b": 180,
    "g": 180,
    "r": 180,
  },
  Object {
    "b": 181,
    "g": 181,
    "r": 181,
  },
  Object {
    "b": 182,
    "g": 182,
    "r": 182,
  },
  Object {
    "b": 183,
    "g": 183,
    "r": 183,
  },
  Object {
    "b": 185,
    "g": 185,
    "r": 185,
  },
  Object {
    "b": 186,
    "g": 186,
    "r": 186,
  },
  Object {
    "b": 187,
    "g": 187,
    "r": 187,
  },
  Object {
    "b": 188,
    "g": 188,
    "r": 188,
  },
  Object {
    "b": 190,
    "g": 190,
    "r": 190,
  },
  Object {
    "b": 191,
    "g": 191,
    "r": 191,
  },
  Object {
    "b": 192,
    "g": 192,
    "r": 192,
  },
  Object {
    "b": 193,
    "g": 193,
    "r": 193,
  },
  Object {
    "b": 195,
    "g": 195,
    "r": 195,
  },
  Object {
    "b": 196,
    "g": 196,
    "r": 196,
  },
  Object {
    "b": 197,
    "g": 197,
    "r": 197,
  },
  Object {
    "b": 198,
    "g": 198,
    "r": 198,
  },
  Object {
    "b": 200,
    "g": 200,
    "r": 200,
  },
  Object {
    "b": 201,
    "g": 201,
    "r": 201,
  },
  Object {
    "b": 202,
    "g": 202,
    "r": 202,
  },
  Object {
    "b": 203,
    "g": 203,
    "r": 203,
  },
  Object {
    "b": 205,
    "g": 205,
    "r": 205,
  },
  Object {
    "b": 206,
    "g": 206,
    "r": 206,
  },
  Object {
    "b": 207,
    "g": 207,
    "r": 207,
  },
  Object {
    "b": 208,
    "g": 208,
    "r": 208,
  },
  Object {
    "b": 210,
    "g": 210,
    "r": 210,
  },
  Object {
    "b": 211,
    "g": 211,
    "r": 211,
  },
  Object {
    "b": 212,
    "g": 212,
    "r": 212,
  },
  Object {
    "b": 213,
    "g": 213,
    "r": 213,
  },
  Object {
    "b": 215,
    "g": 215,
    "r": 215,
  },
  Object {
    "b": 216,
    "g": 216,
    "r": 216,
  },
  Object {
    "b": 217,
    "g": 217,
    "r": 217,
  },
  Object {
    "b": 219,
    "g": 219,
    "r": 219,
  },
  Object {
    "b": 220,
    "g": 220,
    "r": 220,
  },
  Object {
    "b": 221,
    "g": 221,
    "r": 221,
  },
  Object {
    "b": 222,
    "g": 222,
    "r": 222,
  },
  Object {
    "b": 224,
    "g": 224,
    "r": 224,
  },
  Object {
    "b": 225,
    "g": 225,
    "r": 225,
  },
  Object {
    "b": 226,
    "g": 226,
    "r": 226,
  },
  Object {
    "b": 228,
    "g": 228,
    "r": 228,
  },
  Object {
    "b": 229,
    "g": 229,
    "r": 229,
  },
  Object {
    "b": 230,
    "g": 230,
    "r": 230,
  },
  Object {
    "b": 231,
    "g": 231,
    "r": 231,
  },
  Object {
    "b": 233,
    "g": 233,
    "r": 233,
  },
  Object {
    "b": 234,
    "g": 234,
    "r": 234,
  },
  Object {
    "b": 235,
    "g": 235,
    "r": 235,
  },
  Object {
    "b": 237,
    "g": 237,
    "r": 237,
  },
  Object {
    "b": 238,
    "g": 238,
    "r": 238,
  },
  Object {
    "b": 239,
    "g": 239,
    "r": 239,
  },
  Object {
    "b": 241,
    "g": 241,
    "r": 241,
  },
  Object {
    "b": 242,
    "g": 242,
    "r": 242,
  },
  Object {
    "b": 243,
    "g": 243,
    "r": 243,
  },
  Object {
    "b": 244,
    "g": 244,
    "r": 244,
  },
  Object {
    "b": 246,
    "g": 246,
    "r": 246,
  },
  Object {
    "b": 247,
    "g": 247,
    "r": 247,
  },
  Object {
    "b": 248,
    "g": 248,
    "r": 248,
  },
  Object {
    "b": 250,
    "g": 250,
    "r": 250,
  },
  Object {
    "b": 251,
    "g": 251,
    "r": 251,
  },
  Object {
    "b": 252,
    "g": 252,
    "r": 252,
  },
  Object {
    "b": 254,
    "g": 254,
    "r": 254,
  },
  Object {
    "b": 255,
    "g": 255,
    "r": 255,
  },
]
`;

exports[`ramp inferno 1`] = `
Array [
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 1,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 3,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 5,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 7,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 9,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 11,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 13,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 15,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 16,
    "g": 2,
    "r": 0,
  },
  Object {
    "b": 18,
    "g": 3,
    "r": 0,
  },
  Object {
    "b": 19,
    "g": 5,
    "r": 0,
  },
  Object {
    "b": 20,
    "g": 7,
    "r": 0,
  },
  Object {
    "b": 22,
    "g": 9,
    "r": 0,
  },
  Object {
    "b": 23,
    "g": 10,
    "r": 0,
  },
  Object {
    "b": 24,
    "g": 12,
    "r": 0,
  },
  Object {
    "b": 25,
    "g": 13,
    "r": 0,
  },
  Object {
    "b": 26,
    "g": 15,
    "r": 0,
  },
  Object {
    "b": 27,
    "g": 16,
    "r": 1,
  },
  Object {
    "b": 28,
    "g": 17,
    "r": 2,
  },
  Object {
    "b": 29,
    "g": 19,
    "r": 3,
  },
  Object {
    "b": 30,
    "g": 20,
    "r": 3,
  },
  Object {
    "b": 31,
    "g": 21,
    "r": 4,
  },
  Object {
    "b": 32,
    "g": 22,
    "r": 5,
  },
  Object {
    "b": 33,
    "g": 23,
    "r": 6,
  },
  Object {
    "b": 34,
    "g": 24,
    "r": 6,
  },
  Object {
    "b": 35,
    "g": 25,
    "r": 7,
  },
  Object {
    "b": 37,
    "g": 26,
    "r": 7,
  },
  Object {
    "b": 38,
    "g": 27,
    "r": 8,
  },
  Object {
    "b": 39,
    "g": 28,
    "r": 8,
  },
  Object {
    "b": 40,
    "g": 29,
    "r": 8,
  },
  Object {
    "b": 41,
    "g": 30,
    "r": 8,
  },
  Object {
    "b": 42,
    "g": 31,
    "r": 8,
  },
  Object {
    "b": 43,
    "g": 32,
    "r": 9,
  },
  Object {
    "b": 44,
    "g": 33,
    "r": 9,
  },
  Object {
    "b": 45,
    "g": 34,
    "r": 9,
  },
  Object {
    "b": 46,
    "g": 35,
    "r": 9,
  },
  Object {
    "b": 48,
    "g": 36,
    "r": 9,
  },
  Object {
    "b": 49,
    "g": 37,
    "r": 10,
  },
  Object {
    "b": 50,
    "g": 38,
    "r": 10,
  },
  Object {
    "b": 51,
    "g": 39,
    "r": 10,
  },
  Object {
    "b": 52,
    "g": 40,
    "r": 10,
  },
  Object {
    "b": 53,
    "g": 41,
    "r": 10,
  },
  Object {
    "b": 54,
    "g": 42,
    "r": 10,
  },
  Object {
    "b": 55,
    "g": 43,
    "r": 10,
  },
  Object {
    "b": 56,
    "g": 44,
    "r": 11,
  },
  Object {
    "b": 57,
    "g": 45,
    "r": 11,
  },
  Object {
    "b": 58,
    "g": 46,
    "r": 11,
  },
  Object {
    "b": 59,
    "g": 47,
    "r": 11,
  },
  Object {
    "b": 61,
    "g": 48,
    "r": 11,
  },
  Object {
    "b": 62,
    "g": 49,
    "r": 11,
  },
  Object {
    "b": 63,
    "g": 50,
    "r": 11,
  },
  Object {
    "b": 64,
    "g": 51,
    "r": 12,
  },
  Object {
    "b": 65,
    "g": 52,
    "r": 12,
  },
  Object {
    "b": 66,
    "g": 53,
    "r": 12,
  },
  Object {
    "b": 67,
    "g": 54,
    "r": 12,
  },
  Object {
    "b": 68,
    "g": 56,
    "r": 12,
  },
  Object {
    "b": 69,
    "g": 57,
    "r": 12,
  },
  Object {
    "b": 70,
    "g": 58,
    "r": 12,
  },
  Object {
    "b": 71,
    "g": 59,
    "r": 13,
  },
  Object {
    "b": 72,
    "g": 60,
    "r": 13,
  },
  Object {
    "b": 73,
    "g": 61,
    "r": 13,
  },
  Object {
    "b": 74,
    "g": 62,
    "r": 13,
  },
  Object {
    "b": 75,
    "g": 63,
    "r": 13,
  },
  Object {
    "b": 76,
    "g": 64,
    "r": 13,
  },
  Object {
    "b": 77,
    "g": 65,
    "r": 13,
  },
  Object {
    "b": 78,
    "g": 67,
    "r": 14,
  },
  Object {
    "b": 79,
    "g": 68,
    "r": 14,
  },
  Object {
    "b": 80,
    "g": 69,
    "r": 14,
  },
  Object {
    "b": 81,
    "g": 70,
    "r": 14,
  },
  Object {
    "b": 82,
    "g": 71,
    "r": 15,
  },
  Object {
    "b": 83,
    "g": 72,
    "r": 15,
  },
  Object {
    "b": 84,
    "g": 73,
    "r": 15,
  },
  Object {
    "b": 85,
    "g": 75,
    "r": 15,
  },
  Object {
    "b": 86,
    "g": 76,
    "r": 16,
  },
  Object {
    "b": 87,
    "g": 77,
    "r": 16,
  },
  Object {
    "b": 88,
    "g": 78,
    "r": 16,
  },
  Object {
    "b": 89,
    "g": 79,
    "r": 17,
  },
  Object {
    "b": 90,
    "g": 80,
    "r": 17,
  },
  Object {
    "b": 91,
    "g": 81,
    "r": 17,
  },
  Object {
    "b": 91,
    "g": 83,
    "r": 18,
  },
  Object {
    "b": 92,
    "g": 84,
    "r": 18,
  },
  Object {
    "b": 93,
    "g": 85,
    "r": 19,
  },
  Object {
    "b": 94,
    "g": 86,
    "r": 19,
  },
  Object {
    "b": 95,
    "g": 87,
    "r": 20,
  },
  Object {
    "b": 96,
    "g": 88,
    "r": 20,
  },
  Object {
    "b": 97,
    "g": 90,
    "r": 21,
  },
  Object {
    "b": 98,
    "g": 91,
    "r": 21,
  },
  Object {
    "b": 98,
    "g": 92,
    "r": 22,
  },
  Object {
    "b": 99,
    "g": 93,
    "r": 22,
  },
  Object {
    "b": 100,
    "g": 94,
    "r": 23,
  },
  Object {
    "b": 101,
    "g": 96,
    "r": 24,
  },
  Object {
    "b": 102,
    "g": 97,
    "r": 24,
  },
  Object {
    "b": 103,
    "g": 98,
    "r": 25,
  },
  Object {
    "b": 103,
    "g": 99,
    "r": 26,
  },
  Object {
    "b": 104,
    "g": 100,
    "r": 26,
  },
  Object {
    "b": 105,
    "g": 102,
    "r": 27,
  },
  Object {
    "b": 106,
    "g": 103,
    "r": 28,
  },
  Object {
    "b": 107,
    "g": 104,
    "r": 29,
  },
  Object {
    "b": 107,
    "g": 105,
    "r": 30,
  },
  Object {
    "b": 108,
    "g": 106,
    "r": 30,
  },
  Object {
    "b": 109,
    "g": 107,
    "r": 31,
  },
  Object {
    "b": 110,
    "g": 109,
    "r": 32,
  },
  Object {
    "b": 110,
    "g": 110,
    "r": 33,
  },
  Object {
    "b": 111,
    "g": 111,
    "r": 34,
  },
  Object {
    "b": 112,
    "g": 112,
    "r": 35,
  },
  Object {
    "b": 112,
    "g": 114,
    "r": 36,
  },
  Object {
    "b": 113,
    "g": 115,
    "r": 37,
  },
  Object {
    "b": 114,
    "g": 116,
    "r": 38,
  },
  Object {
    "b": 115,
    "g": 117,
    "r": 39,
  },
  Object {
    "b": 115,
    "g": 118,
    "r": 40,
  },
  Object {
    "b": 116,
    "g": 120,
    "r": 41,
  },
  Object {
    "b": 117,
    "g": 121,
    "r": 42,
  },
  Object {
    "b": 117,
    "g": 122,
    "r": 43,
  },
  Object {
    "b": 118,
    "g": 123,
    "r": 44,
  },
  Object {
    "b": 119,
    "g": 124,
    "r": 45,
  },
  Object {
    "b": 119,
    "g": 126,
    "r": 46,
  },
  Object {
    "b": 120,
    "g": 127,
    "r": 47,
  },
  Object {
    "b": 120,
    "g": 128,
    "r": 48,
  },
  Object {
    "b": 121,
    "g": 129,
    "r": 50,
  },
  Object {
    "b": 122,
    "g": 131,
    "r": 51,
  },
  Object {
    "b": 122,
    "g": 132,
    "r": 52,
  },
  Object {
    "b": 123,
    "g": 133,
    "r": 53,
  },
  Object {
    "b": 123,
    "g": 134,
    "r": 54,
  },
  Object {
    "b": 124,
    "g": 135,
    "r": 56,
  },
  Object {
    "b": 124,
    "g": 137,
    "r": 57,
  },
  Object {
    "b": 125,
    "g": 138,
    "r": 58,
  },
  Object {
    "b": 126,
    "g": 139,
    "r": 59,
  },
  Object {
    "b": 126,
    "g": 140,
    "r": 61,
  },
  Object {
    "b": 127,
    "g": 141,
    "r": 62,
  },
  Object {
    "b": 127,
    "g": 143,
    "r": 63,
  },
  Object {
    "b": 128,
    "g": 144,
    "r": 65,
  },
  Object {
    "b": 128,
    "g": 145,
    "r": 66,
  },
  Object {
    "b": 129,
    "g": 146,
    "r": 67,
  },
  Object {
    "b": 129,
    "g": 148,
    "r": 69,
  },
  Object {
    "b": 130,
    "g": 149,
    "r": 70,
  },
  Object {
    "b": 130,
    "g": 150,
    "r": 72,
  },
  Object {
    "b": 131,
    "g": 151,
    "r": 73,
  },
  Object {
    "b": 131,
    "g": 152,
    "r": 75,
  },
  Object {
    "b": 132,
    "g": 154,
    "r": 76,
  },
  Object {
    "b": 132,
    "g": 155,
    "r": 77,
  },
  Object {
    "b": 132,
    "g": 156,
    "r": 79,
  },
  Object {
    "b": 133,
    "g": 157,
    "r": 80,
  },
  Object {
    "b": 133,
    "g": 159,
    "r": 82,
  },
  Object {
    "b": 134,
    "g": 160,
    "r": 83,
  },
  Object {
    "b": 134,
    "g": 161,
    "r": 85,
  },
  Object {
    "b": 135,
    "g": 162,
    "r": 87,
  },
  Object {
    "b": 135,
    "g": 163,
    "r": 88,
  },
  Object {
    "b": 135,
    "g": 165,
    "r": 90,
  },
  Object {
    "b": 136,
    "g": 166,
    "r": 91,
  },
  Object {
    "b": 136,
    "g": 167,
    "r": 93,
  },
  Object {
    "b": 137,
    "g": 168,
    "r": 94,
  },
  Object {
    "b": 137,
    "g": 169,
    "r": 96,
  },
  Object {
    "b": 137,
    "g": 171,
    "r": 98,
  },
  Object {
    "b": 138,
    "g": 172,
    "r": 99,
  },
  Object {
    "b": 138,
    "g": 173,
    "r": 101,
  },
  Object {
    "b": 138,
    "g": 174,
    "r": 103,
  },
  Object {
    "b": 139,
    "g": 175,
    "r": 104,
  },
  Object {
    "b": 139,
    "g": 177,
    "r": 106,
  },
  Object {
    "b": 139,
    "g": 178,
    "r": 108,
  },
  Object {
    "b": 140,
    "g": 179,
    "r": 109,
  },
  Object {
    "b": 140,
    "g": 180,
    "r": 111,
  },
  Object {
    "b": 140,
    "g": 181,
    "r": 113,
  },
  Object {
    "b": 141,
    "g": 183,
    "r": 115,
  },
  Object {
    "b": 141,
    "g": 184,
    "r": 116,
  },
  Object {
    "b": 141,
    "g": 185,
    "r": 118,
  },
  Object {
    "b": 142,
    "g": 186,
    "r": 120,
  },
  Object {
    "b": 142,
    "g": 187,
    "r": 122,
  },
  Object {
    "b": 142,
    "g": 189,
    "r": 124,
  },
  Object {
    "b": 143,
    "g": 190,
    "r": 125,
  },
  Object {
    "b": 143,
    "g": 191,
    "r": 127,
  },
  Object {
    "b": 143,
    "g": 192,
    "r": 129,
  },
  Object {
    "b": 144,
    "g": 193,
    "r": 131,
  },
  Object {
    "b": 144,
    "g": 195,
    "r": 133,
  },
  Object {
    "b": 144,
    "g": 196,
    "r": 135,
  },
  Object {
    "b": 145,
    "g": 197,
    "r": 137,
  },
  Object {
    "b": 145,
    "g": 198,
    "r": 138,
  },
  Object {
    "b": 145,
    "g": 199,
    "r": 140,
  },
  Object {
    "b": 145,
    "g": 200,
    "r": 142,
  },
  Object {
    "b": 146,
    "g": 202,
    "r": 144,
  },
  Object {
    "b": 146,
    "g": 203,
    "r": 146,
  },
  Object {
    "b": 146,
    "g": 204,
    "r": 148,
  },
  Object {
    "b": 147,
    "g": 205,
    "r": 150,
  },
  Object {
    "b": 147,
    "g": 206,
    "r": 152,
  },
  Object {
    "b": 147,
    "g": 207,
    "r": 154,
  },
  Object {
    "b": 147,
    "g": 208,
    "r": 156,
  },
  Object {
    "b": 148,
    "g": 210,
    "r": 158,
  },
  Object {
    "b": 148,
    "g": 211,
    "r": 160,
  },
  Object {
    "b": 148,
    "g": 212,
    "r": 162,
  },
  Object {
    "b": 149,
    "g": 213,
    "r": 164,
  },
  Object {
    "b": 149,
    "g": 214,
    "r": 166,
  },
  Object {
    "b": 149,
    "g": 215,
    "r": 168,
  },
  Object {
    "b": 150,
    "g": 216,
    "r": 170,
  },
  Object {
    "b": 150,
    "g": 218,
    "r": 173,
  },
  Object {
    "b": 150,
    "g": 219,
    "r": 175,
  },
  Object {
    "b": 151,
    "g": 220,
    "r": 177,
  },
  Object {
    "b": 151,
    "g": 221,
    "r": 179,
  },
  Object {
    "b": 151,
    "g": 222,
    "r": 181,
  },
  Object {
    "b": 151,
    "g": 223,
    "r": 183,
  },
  Object {
    "b": 152,
    "g": 224,
    "r": 185,
  },
  Object {
    "b": 152,
    "g": 225,
    "r": 187,
  },
  Object {
    "b": 152,
    "g": 226,
    "r": 190,
  },
  Object {
    "b": 153,
    "g": 228,
    "r": 192,
  },
  Object {
    "b": 153,
    "g": 229,
    "r": 194,
  },
  Object {
    "b": 153,
    "g": 230,
    "r": 196,
  },
  Object {
    "b": 154,
    "g": 231,
    "r": 198,
  },
  Object {
    "b": 154,
    "g": 232,
    "r": 201,
  },
  Object {
    "b": 155,
    "g": 233,
    "r": 203,
  },
  Object {
    "b": 155,
    "g": 234,
    "r": 205,
  },
  Object {
    "b": 155,
    "g": 235,
    "r": 207,
  },
  Object {
    "b": 156,
    "g": 236,
    "r": 210,
  },
  Object {
    "b": 156,
    "g": 237,
    "r": 212,
  },
  Object {
    "b": 156,
    "g": 238,
    "r": 214,
  },
  Object {
    "b": 157,
    "g": 239,
    "r": 217,
  },
  Object {
    "b": 157,
    "g": 241,
    "r": 219,
  },
  Object {
    "b": 158,
    "g": 242,
    "r": 221,
  },
  Object {
    "b": 158,
    "g": 243,
    "r": 223,
  },
  Object {
    "b": 159,
    "g": 244,
    "r": 226,
  },
  Object {
    "b": 159,
    "g": 245,
    "r": 228,
  },
  Object {
    "b": 159,
    "g": 246,
    "r": 230,
  },
  Object {
    "b": 160,
    "g": 247,
    "r": 233,
  },
  Object {
    "b": 160,
    "g": 248,
    "r": 235,
  },
  Object {
    "b": 161,
    "g": 249,
    "r": 238,
  },
  Object {
    "b": 161,
    "g": 250,
    "r": 240,
  },
  Object {
    "b": 162,
    "g": 251,
    "r": 242,
  },
  Object {
    "b": 162,
    "g": 252,
    "r": 245,
  },
  Object {
    "b": 163,
    "g": 253,
    "r": 247,
  },
  Object {
    "b": 163,
    "g": 254,
    "r": 250,
  },
  Object {
    "b": 164,
    "g": 255,
    "r": 252,
  },
]
`;

exports[`ramp magma 1`] = `
Array [
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 1,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 3,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 5,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 7,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 9,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 11,
    "g": 0,
    "r": 0,
  },
  Object {
    "b": 13,
    "g": 1,
    "r": 0,
  },
  Object {
    "b": 14,
    "g": 3,
    "r": 0,
  },
  Object {
    "b": 16,
    "g": 5,
    "r": 0,
  },
  Object {
    "b": 17,
    "g": 6,
    "r": 0,
  },
  Object {
    "b": 18,
    "g": 8,
    "r": 0,
  },
  Object {
    "b": 19,
    "g": 10,
    "r": 0,
  },
  Object {
    "b": 21,
    "g": 11,
    "r": 1,
  },
  Object {
    "b": 22,
    "g": 13,
    "r": 2,
  },
  Object {
    "b": 23,
    "g": 14,
    "r": 4,
  },
  Object {
    "b": 24,
    "g": 16,
    "r": 5,
  },
  Object {
    "b": 25,
    "g": 17,
    "r": 6,
  },
  Object {
    "b": 26,
    "g": 18,
    "r": 7,
  },
  Object {
    "b": 27,
    "g": 19,
    "r": 8,
  },
  Object {
    "b": 28,
    "g": 20,
    "r": 10,
  },
  Object {
    "b": 29,
    "g": 21,
    "r": 11,
  },
  Object {
    "b": 30,
    "g": 22,
    "r": 12,
  },
  Object {
    "b": 31,
    "g": 23,
    "r": 12,
  },
  Object {
    "b": 32,
    "g": 24,
    "r": 13,
  },
  Object {
    "b": 33,
    "g": 25,
    "r": 14,
  },
  Object {
    "b": 34,
    "g": 26,
    "r": 15,
  },
  Object {
    "b": 35,
    "g": 27,
    "r": 15,
  },
  Object {
    "b": 36,
    "g": 28,
    "r": 16,
  },
  Object {
    "b": 37,
    "g": 29,
    "r": 16,
  },
  Object {
    "b": 38,
    "g": 30,
    "r": 17,
  },
  Object {
    "b": 39,
    "g": 31,
    "r": 17,
  },
  Object {
    "b": 40,
    "g": 32,
    "r": 18,
  },
  Object {
    "b": 41,
    "g": 33,
    "r": 18,
  },
  Object {
    "b": 42,
    "g": 34,
    "r": 19,
  },
  Object {
    "b": 43,
    "g": 35,
    "r": 19,
  },
  Object {
    "b": 44,
    "g": 36,
    "r": 20,
  },
  Object {
    "b": 45,
    "g": 37,
    "r": 20,
  },
  Object {
    "b": 46,
    "g": 38,
    "r": 21,
  },
  Object {
    "b": 47,
    "g": 39,
    "r": 21,
  },
  Object {
    "b": 48,
    "g": 40,
    "r": 22,
  },
  Object {
    "b": 49,
    "g": 41,
    "r": 23,
  },
  Object {
    "b": 50,
    "g": 42,
    "r": 23,
  },
  Object {
    "b": 51,
    "g": 43,
    "r": 24,
  },
  Object {
    "b": 52,
    "g": 44,
    "r": 24,
  },
  Object {
    "b": 53,
    "g": 45,
    "r": 25,
  },
  Object {
    "b": 54,
    "g": 46,
    "r": 25,
  },
  Object {
    "b": 56,
    "g": 47,
    "r": 26,
  },
  Object {
    "b": 57,
    "g": 48,
    "r": 26,
  },
  Object {
    "b": 58,
    "g": 49,
    "r": 27,
  },
  Object {
    "b": 59,
    "g": 50,
    "r": 27,
  },
  Object {
    "b": 60,
    "g": 51,
    "r": 28,
  },
  Object {
    "b": 61,
    "g": 52,
    "r": 28,
  },
  Object {
    "b": 62,
    "g": 53,
    "r": 29,
  },
  Object {
    "b": 63,
    "g": 54,
    "r": 30,
  },
  Object {
    "b": 64,
    "g": 55,
    "r": 30,
  },
  Object {
    "b": 65,
    "g": 56,
    "r": 31,
  },
  Object {
    "b": 66,
    "g": 57,
    "r": 31,
  },
  Object {
    "b": 67,
    "g": 58,
    "r": 32,
  },
  Object {
    "b": 68,
    "g": 59,
    "r": 32,
  },
  Object {
    "b": 69,
    "g": 61,
    "r": 33,
  },
  Object {
    "b": 70,
    "g": 62,
    "r": 33,
  },
  Object {
    "b": 71,
    "g": 63,
    "r": 34,
  },
  Object {
    "b": 72,
    "g": 64,
    "r": 35,
  },
  Object {
    "b": 73,
    "g": 65,
    "r": 35,
  },
  Object {
    "b": 74,
    "g": 66,
    "r": 36,
  },
  Object {
    "b": 75,
    "g": 67,
    "r": 36,
  },
  Object {
    "b": 76,
    "g": 68,
    "r": 37,
  },
  Object {
    "b": 77,
    "g": 69,
    "r": 38,
  },
  Object {
    "b": 78,
    "g": 70,
    "r": 38,
  },
  Object {
    "b": 79,
    "g": 71,
    "r": 39,
  },
  Object {
    "b": 80,
    "g": 73,
    "r": 39,
  },
  Object {
    "b": 81,
    "g": 74,
    "r": 40,
  },
  Object {
    "b": 82,
    "g": 75,
    "r": 41,
  },
  Object {
    "b": 83,
    "g": 76,
    "r": 41,
  },
  Object {
    "b": 83,
    "g": 77,
    "r": 42,
  },
  Object {
    "b": 84,
    "g": 78,
    "r": 43,
  },
  Object {
    "b": 85,
    "g": 79,
    "r": 43,
  },
  Object {
    "b": 86,
    "g": 80,
    "r": 44,
  },
  Object {
    "b": 87,
    "g": 82,
    "r": 45,
  },
  Object {
    "b": 88,
    "g": 83,
    "r": 45,
  },
  Object {
    "b": 89,
    "g": 84,
    "r": 46,
  },
  Object {
    "b": 90,
    "g": 85,
    "r": 47,
  },
  Object {
    "b": 91,
    "g": 86,
    "r": 47,
  },
  Object {
    "b": 92,
    "g": 87,
    "r": 48,
  },
  Object {
    "b": 93,
    "g": 88,
    "r": 49,
  },
  Object {
    "b": 94,
    "g": 89,
    "r": 50,
  },
  Object {
    "b": 95,
    "g": 91,
    "r": 50,
  },
  Object {
    "b": 96,
    "g": 92,
    "r": 51,
  },
  Object {
    "b": 96,
    "g": 93,
    "r": 52,
  },
  Object {
    "b": 97,
    "g": 94,
    "r": 52,
  },
  Object {
    "b": 98,
    "g": 95,
    "r": 53,
  },
  Object {
    "b": 99,
    "g": 96,
    "r": 54,
  },
  Object {
    "b": 100,
    "g": 98,
    "r": 55,
  },
  Object {
    "b": 101,
    "g": 99,
    "r": 56,
  },
  Object {
    "b": 102,
    "g": 100,
    "r": 56,
  },
  Object {
    "b": 103,
    "g": 101,
    "r": 57,
  },
  Object {
    "b": 104,
    "g": 102,
    "r": 58,
  },
  Object {
    "b": 104,
    "g": 103,
    "r": 59,
  },
  Object {
    "b": 105,
    "g": 105,
    "r": 60,
  },
  Object {
    "b": 106,
    "g": 106,
    "r": 61,
  },
  Object {
    "b": 107,
    "g": 107,
    "r": 61,
  },
  Object {
    "b": 108,
    "g": 108,
    "r": 62,
  },
  Object {
    "b": 109,
    "g": 109,
    "r": 63,
  },
  Object {
    "b": 109,
    "g": 110,
    "r": 64,
  },
  Object {
    "b": 110,
    "g": 112,
    "r": 65,
  },
  Object {
    "b": 111,
    "g": 113,
    "r": 66,
  },
  Object {
    "b": 112,
    "g": 114,
    "r": 67,
  },
  Object {
    "b": 113,
    "g": 115,
    "r": 68,
  },
  Object {
    "b": 113,
    "g": 116,
    "r": 69,
  },
  Object {
    "b": 114,
    "g": 118,
    "r": 70,
  },
  Object {
    "b": 115,
    "g": 119,
    "r": 71,
  },
  Object {
    "b": 116,
    "g": 120,
    "r": 72,
  },
  Object {
    "b": 117,
    "g": 121,
    "r": 73,
  },
  Object {
    "b": 117,
    "g": 122,
    "r": 74,
  },
  Object {
    "b": 118,
    "g": 123,
    "r": 75,
  },
  Object {
    "b": 119,
    "g": 125,
    "r": 76,
  },
  Object {
    "b": 120,
    "g": 126,
    "r": 77,
  },
  Object {
    "b": 121,
    "g": 127,
    "r": 78,
  },
  Object {
    "b": 121,
    "g": 128,
    "r": 79,
  },
  Object {
    "b": 122,
    "g": 129,
    "r": 80,
  },
  Object {
    "b": 123,
    "g": 131,
    "r": 81,
  },
  Object {
    "b": 124,
    "g": 132,
    "r": 82,
  },
  Object {
    "b": 124,
    "g": 133,
    "r": 83,
  },
  Object {
    "b": 125,
    "g": 134,
    "r": 84,
  },
  Object {
    "b": 126,
    "g": 135,
    "r": 85,
  },
  Object {
    "b": 126,
    "g": 137,
    "r": 86,
  },
  Object {
    "b": 127,
    "g": 138,
    "r": 88,
  },
  Object {
    "b": 128,
    "g": 139,
    "r": 89,
  },
  Object {
    "b": 129,
    "g": 140,
    "r": 90,
  },
  Object {
    "b": 129,
    "g": 141,
    "r": 91,
  },
  Object {
    "b": 130,
    "g": 143,
    "r": 92,
  },
  Object {
    "b": 131,
    "g": 144,
    "r": 93,
  },
  Object {
    "b": 131,
    "g": 145,
    "r": 95,
  },
  Object {
    "b": 132,
    "g": 146,
    "r": 96,
  },
  Object {
    "b": 133,
    "g": 147,
    "r": 97,
  },
  Object {
    "b": 133,
    "g": 149,
    "r": 98,
  },
  Object {
    "b": 134,
    "g": 150,
    "r": 100,
  },
  Object {
    "b": 135,
    "g": 151,
    "r": 101,
  },
  Object {
    "b": 135,
    "g": 152,
    "r": 102,
  },
  Object {
    "b": 136,
    "g": 153,
    "r": 103,
  },
  Object {
    "b": 137,
    "g": 155,
    "r": 105,
  },
  Object {
    "b": 137,
    "g": 156,
    "r": 106,
  },
  Object {
    "b": 138,
    "g": 157,
    "r": 107,
  },
  Object {
    "b": 139,
    "g": 158,
    "r": 109,
  },
  Object {
    "b": 139,
    "g": 159,
    "r": 110,
  },
  Object {
    "b": 140,
    "g": 161,
    "r": 111,
  },
  Object {
    "b": 141,
    "g": 162,
    "r": 113,
  },
  Object {
    "b": 141,
    "g": 163,
    "r": 114,
  },
  Object {
    "b": 142,
    "g": 164,
    "r": 115,
  },
  Object {
    "b": 143,
    "g": 165,
    "r": 117,
  },
  Object {
    "b": 143,
    "g": 167,
    "r": 118,
  },
  Object {
    "b": 144,
    "g": 168,
    "r": 120,
  },
  Object {
    "b": 144,
    "g": 169,
    "r": 121,
  },
  Object {
    "b": 145,
    "g": 170,
    "r": 123,
  },
  Object {
    "b": 146,
    "g": 171,
    "r": 124,
  },
  Object {
    "b": 146,
    "g": 173,
    "r": 125,
  },
  Object {
    "b": 147,
    "g": 174,
    "r": 127,
  },
  Object {
    "b": 148,
    "g": 175,
    "r": 128,
  },
  Object {
    "b": 148,
    "g": 176,
    "r": 130,
  },
  Object {
    "b": 149,
    "g": 177,
    "r": 131,
  },
  Object {
    "b": 149,
    "g": 178,
    "r": 133,
  },
  Object {
    "b": 150,
    "g": 180,
    "r": 134,
  },
  Object {
    "b": 151,
    "g": 181,
    "r": 136,
  },
  Object {
    "b": 151,
    "g": 182,
    "r": 138,
  },
  Object {
    "b": 152,
    "g": 183,
    "r": 139,
  },
  Object {
    "b": 152,
    "g": 184,
    "r": 141,
  },
  Object {
    "b": 153,
    "g": 186,
    "r": 142,
  },
  Object {
    "b": 154,
    "g": 187,
    "r": 144,
  },
  Object {
    "b": 154,
    "g": 188,
    "r": 145,
  },
  Object {
    "b": 155,
    "g": 189,
    "r": 147,
  },
  Object {
    "b": 155,
    "g": 190,
    "r": 149,
  },
  Object {
    "b": 156,
    "g": 192,
    "r": 150,
  },
  Object {
    "b": 157,
    "g": 193,
    "r": 152,
  },
  Object {
    "b": 157,
    "g": 194,
    "r": 154,
  },
  Object {
    "b": 158,
    "g": 195,
    "r": 155,
  },
  Object {
    "b": 158,
    "g": 196,
    "r": 157,
  },
  Object {
    "b": 159,
    "g": 197,
    "r": 159,
  },
  Object {
    "b": 159,
    "g": 199,
    "r": 160,
  },
  Object {
    "b": 160,
    "g": 200,
    "r": 162,
  },
  Object {
    "b": 161,
    "g": 201,
    "r": 164,
  },
  Object {
    "b": 161,
    "g": 202,
    "r": 165,
  },
  Object {
    "b": 162,
    "g": 203,
    "r": 167,
  },
  Object {
    "b": 162,
    "g": 204,
    "r": 169,
  },
  Object {
    "b": 163,
    "g": 206,
    "r": 171,
  },
  Object {
    "b": 164,
    "g": 207,
    "r": 172,
  },
  Object {
    "b": 164,
    "g": 208,
    "r": 174,
  },
  Object {
    "b": 165,
    "g": 209,
    "r": 176,
  },
  Object {
    "b": 165,
    "g": 210,
    "r": 178,
  },
  Object {
    "b": 166,
    "g": 211,
    "r": 179,
  },
  Object {
    "b": 167,
    "g": 213,
    "r": 181,
  },
  Object {
    "b": 167,
    "g": 214,
    "r": 183,
  },
  Object {
    "b": 168,
    "g": 215,
    "r": 185,
  },
  Object {
    "b": 168,
    "g": 216,
    "r": 187,
  },
  Object {
    "b": 169,
    "g": 217,
    "r": 189,
  },
  Object {
    "b": 170,
    "g": 218,
    "r": 190,
  },
  Object {
    "b": 170,
    "g": 219,
    "r": 192,
  },
  Object {
    "b": 171,
    "g": 221,
    "r": 194,
  },
  Object {
    "b": 172,
    "g": 222,
    "r": 196,
  },
  Object {
    "b": 172,
    "g": 223,
    "r": 198,
  },
  Object {
    "b": 173,
    "g": 224,
    "r": 200,
  },
  Object {
    "b": 173,
    "g": 225,
    "r": 202,
  },
  Object {
    "b": 174,
    "g": 226,
    "r": 204,
  },
  Object {
    "b": 175,
    "g": 227,
    "r": 206,
  },
  Object {
    "b": 175,
    "g": 229,
    "r": 208,
  },
  Object {
    "b": 176,
    "g": 230,
    "r": 209,
  },
  Object {
    "b": 177,
    "g": 231,
    "r": 211,
  },
  Object {
    "b": 177,
    "g": 232,
    "r": 213,
  },
  Object {
    "b": 178,
    "g": 233,
    "r": 215,
  },
  Object {
    "b": 179,
    "g": 234,
    "r": 217,
  },
  Object {
    "b": 179,
    "g": 235,
    "r": 219,
  },
  Object {
    "b": 180,
    "g": 236,
    "r": 221,
  },
  Object {
    "b": 181,
    "g": 238,
    "r": 223,
  },
  Object {
    "b": 181,
    "g": 239,
    "r": 225,
  },
  Object {
    "b": 182,
    "g": 240,
    "r": 227,
  },
  Object {
    "b": 183,
    "g": 241,
    "r": 229,
  },
  Object {
    "b": 184,
    "g": 242,
    "r": 231,
  },
  Object {
    "b": 184,
    "g": 243,
    "r": 233,
  },
  Object {
    "b": 185,
    "g": 244,
    "r": 235,
  },
  Object {
    "b": 186,
    "g": 245,
    "r": 237,
  },
  Object {
    "b": 186,
    "g": 246,
    "r": 240,
  },
  Object {
    "b": 187,
    "g": 248,
    "r": 242,
  },
  Object {
    "b": 188,
    "g": 249,
    "r": 244,
  },
  Object {
    "b": 189,
    "g": 250,
    "r": 246,
  },
  Object {
    "b": 189,
    "g": 251,
    "r": 248,
  },
  Object {
    "b": 190,
    "g": 252,
    "r": 250,
  },
  Object {
    "b": 191,
    "g": 253,
    "r": 252,
  },
]
`;

exports[`ramp plasma 1`] = `
Array [
  Object {
    "b": 135,
    "g": 8,
    "r": 13,
  },
  Object {
    "b": 137,
    "g": 11,
    "r": 2,
  },
  Object {
    "b": 139,
    "g": 15,
    "r": 0,
  },
  Object {
    "b": 141,
    "g": 17,
    "r": 0,
  },
  Object {
    "b": 142,
    "g": 20,
    "r": 0,
  },
  Object {
    "b": 144,
    "g": 22,
    "r": 0,
  },
  Object {
    "b": 146,
    "g": 24,
    "r": 0,
  },
  Object {
    "b": 148,
    "g": 26,
    "r": 0,
  },
  Object {
    "b": 150,
    "g": 28,
    "r": 0,
  },
  Object {
    "b": 151,
    "g": 30,
    "r": 0,
  },
  Object {
    "b": 153,
    "g": 32,
    "r": 0,
  },
  Object {
    "b": 155,
    "g": 34,
    "r": 0,
  },
  Object {
    "b": 156,
    "g": 36,
    "r": 0,
  },
  Object {
    "b": 158,
    "g": 37,
    "r": 0,
  },
  Object {
    "b": 160,
    "g": 39,
    "r": 0,
  },
  Object {
    "b": 161,
    "g": 40,
    "r": 0,
  },
  Object {
    "b": 163,
    "g": 42,
    "r": 0,
  },
  Object {
    "b": 165,
    "g": 44,
    "r": 0,
  },
  Object {
    "b": 166,
    "g": 45,
    "r": 0,
  },
  Object {
    "b": 168,
    "g": 47,
    "r": 0,
  },
  Object {
    "b": 169,
    "g": 48,
    "r": 0,
  },
  Object {
    "b": 171,
    "g": 49,
    "r": 0,
  },
  Object {
    "b": 172,
    "g": 51,
    "r": 0,
  },
  Object {
    "b": 174,
    "g": 52,
    "r": 0,
  },
  Object {
    "b": 175,
    "g": 54,
    "r": 0,
  },
  Object {
    "b": 177,
    "g": 55,
    "r": 0,
  },
  Object {
    "b": 178,
    "g": 56,
    "r": 0,
  },
  Object {
    "b": 180,
    "g": 58,
    "r": 0,
  },
  Object {
    "b": 181,
    "g": 59,
    "r": 0,
  },
  Object {
    "b": 182,
    "g": 60,
    "r": 0,
  },
  Object {
    "b": 184,
    "g": 62,
    "r": 0,
  },
  Object {
    "b": 185,
    "g": 63,
    "r": 0,
  },
  Object {
    "b": 186,
    "g": 64,
    "r": 0,
  },
  Object {
    "b": 188,
    "g": 66,
    "r": 0,
  },
  Object {
    "b": 189,
    "g": 67,
    "r": 0,
  },
  Object {
    "b": 190,
    "g": 68,
    "r": 0,
  },
  Object {
    "b": 191,
    "g": 69,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 71,
    "r": 0,
  },
  Object {
    "b": 194,
    "g": 72,
    "r": 0,
  },
  Object {
    "b": 195,
    "g": 73,
    "r": 0,
  },
  Object {
    "b": 196,
    "g": 74,
    "r": 0,
  },
  Object {
    "b": 197,
    "g": 75,
    "r": 0,
  },
  Object {
    "b": 198,
    "g": 77,
    "r": 0,
  },
  Object {
    "b": 199,
    "g": 78,
    "r": 0,
  },
  Object {
    "b": 200,
    "g": 79,
    "r": 0,
  },
  Object {
    "b": 201,
    "g": 80,
    "r": 0,
  },
  Object {
    "b": 202,
    "g": 81,
    "r": 0,
  },
  Object {
    "b": 203,
    "g": 82,
    "r": 0,
  },
  Object {
    "b": 204,
    "g": 84,
    "r": 0,
  },
  Object {
    "b": 205,
    "g": 85,
    "r": 0,
  },
  Object {
    "b": 206,
    "g": 86,
    "r": 0,
  },
  Object {
    "b": 206,
    "g": 87,
    "r": 0,
  },
  Object {
    "b": 207,
    "g": 88,
    "r": 0,
  },
  Object {
    "b": 208,
    "g": 89,
    "r": 0,
  },
  Object {
    "b": 209,
    "g": 90,
    "r": 0,
  },
  Object {
    "b": 209,
    "g": 91,
    "r": 0,
  },
  Object {
    "b": 210,
    "g": 92,
    "r": 0,
  },
  Object {
    "b": 211,
    "g": 94,
    "r": 0,
  },
  Object {
    "b": 211,
    "g": 95,
    "r": 0,
  },
  Object {
    "b": 212,
    "g": 96,
    "r": 0,
  },
  Object {
    "b": 213,
    "g": 97,
    "r": 0,
  },
  Object {
    "b": 213,
    "g": 98,
    "r": 0,
  },
  Object {
    "b": 214,
    "g": 99,
    "r": 0,
  },
  Object {
    "b": 214,
    "g": 100,
    "r": 0,
  },
  Object {
    "b": 215,
    "g": 101,
    "r": 0,
  },
  Object {
    "b": 215,
    "g": 102,
    "r": 0,
  },
  Object {
    "b": 216,
    "g": 103,
    "r": 0,
  },
  Object {
    "b": 216,
    "g": 104,
    "r": 0,
  },
  Object {
    "b": 216,
    "g": 105,
    "r": 0,
  },
  Object {
    "b": 217,
    "g": 106,
    "r": 0,
  },
  Object {
    "b": 217,
    "g": 107,
    "r": 0,
  },
  Object {
    "b": 217,
    "g": 108,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 109,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 111,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 112,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 113,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 114,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 115,
    "r": 0,
  },
  Object {
    "b": 219,
    "g": 116,
    "r": 0,
  },
  Object {
    "b": 219,
    "g": 117,
    "r": 0,
  },
  Object {
    "b": 219,
    "g": 118,
    "r": 0,
  },
  Object {
    "b": 219,
    "g": 119,
    "r": 0,
  },
  Object {
    "b": 219,
    "g": 120,
    "r": 0,
  },
  Object {
    "b": 219,
    "g": 121,
    "r": 0,
  },
  Object {
    "b": 219,
    "g": 122,
    "r": 0,
  },
  Object {
    "b": 219,
    "g": 123,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 124,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 125,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 126,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 127,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 128,
    "r": 0,
  },
  Object {
    "b": 218,
    "g": 128,
    "r": 0,
  },
  Object {
    "b": 217,
    "g": 129,
    "r": 0,
  },
  Object {
    "b": 217,
    "g": 130,
    "r": 0,
  },
  Object {
    "b": 217,
    "g": 131,
    "r": 0,
  },
  Object {
    "b": 216,
    "g": 132,
    "r": 0,
  },
  Object {
    "b": 216,
    "g": 133,
    "r": 0,
  },
  Object {
    "b": 216,
    "g": 134,
    "r": 0,
  },
  Object {
    "b": 215,
    "g": 135,
    "r": 0,
  },
  Object {
    "b": 215,
    "g": 136,
    "r": 0,
  },
  Object {
    "b": 215,
    "g": 137,
    "r": 0,
  },
  Object {
    "b": 214,
    "g": 138,
    "r": 0,
  },
  Object {
    "b": 214,
    "g": 139,
    "r": 0,
  },
  Object {
    "b": 213,
    "g": 140,
    "r": 0,
  },
  Object {
    "b": 213,
    "g": 141,
    "r": 0,
  },
  Object {
    "b": 212,
    "g": 142,
    "r": 0,
  },
  Object {
    "b": 211,
    "g": 143,
    "r": 0,
  },
  Object {
    "b": 211,
    "g": 144,
    "r": 0,
  },
  Object {
    "b": 210,
    "g": 145,
    "r": 0,
  },
  Object {
    "b": 210,
    "g": 146,
    "r": 0,
  },
  Object {
    "b": 209,
    "g": 147,
    "r": 0,
  },
  Object {
    "b": 208,
    "g": 148,
    "r": 0,
  },
  Object {
    "b": 208,
    "g": 148,
    "r": 0,
  },
  Object {
    "b": 207,
    "g": 149,
    "r": 0,
  },
  Object {
    "b": 206,
    "g": 150,
    "r": 0,
  },
  Object {
    "b": 205,
    "g": 151,
    "r": 0,
  },
  Object {
    "b": 205,
    "g": 152,
    "r": 0,
  },
  Object {
    "b": 204,
    "g": 153,
    "r": 0,
  },
  Object {
    "b": 203,
    "g": 154,
    "r": 0,
  },
  Object {
    "b": 202,
    "g": 155,
    "r": 0,
  },
  Object {
    "b": 201,
    "g": 156,
    "r": 0,
  },
  Object {
    "b": 200,
    "g": 157,
    "r": 0,
  },
  Object {
    "b": 200,
    "g": 158,
    "r": 0,
  },
  Object {
    "b": 199,
    "g": 159,
    "r": 0,
  },
  Object {
    "b": 198,
    "g": 160,
    "r": 0,
  },
  Object {
    "b": 197,
    "g": 160,
    "r": 0,
  },
  Object {
    "b": 196,
    "g": 161,
    "r": 0,
  },
  Object {
    "b": 195,
    "g": 162,
    "r": 0,
  },
  Object {
    "b": 194,
    "g": 163,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 164,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 165,
    "r": 0,
  },
  Object {
    "b": 191,
    "g": 166,
    "r": 0,
  },
  Object {
    "b": 190,
    "g": 167,
    "r": 0,
  },
  Object {
    "b": 189,
    "g": 168,
    "r": 0,
  },
  Object {
    "b": 188,
    "g": 169,
    "r": 0,
  },
  Object {
    "b": 187,
    "g": 170,
    "r": 0,
  },
  Object {
    "b": 186,
    "g": 170,
    "r": 0,
  },
  Object {
    "b": 184,
    "g": 171,
    "r": 0,
  },
  Object {
    "b": 183,
    "g": 172,
    "r": 0,
  },
  Object {
    "b": 182,
    "g": 173,
    "r": 0,
  },
  Object {
    "b": 181,
    "g": 174,
    "r": 0,
  },
  Object {
    "b": 180,
    "g": 175,
    "r": 0,
  },
  Object {
    "b": 179,
    "g": 176,
    "r": 0,
  },
  Object {
    "b": 177,
    "g": 177,
    "r": 0,
  },
  Object {
    "b": 176,
    "g": 178,
    "r": 0,
  },
  Object {
    "b": 175,
    "g": 178,
    "r": 0,
  },
  Object {
    "b": 174,
    "g": 179,
    "r": 0,
  },
  Object {
    "b": 173,
    "g": 180,
    "r": 0,
  },
  Object {
    "b": 171,
    "g": 181,
    "r": 0,
  },
  Object {
    "b": 170,
    "g": 182,
    "r": 0,
  },
  Object {
    "b": 169,
    "g": 183,
    "r": 0,
  },
  Object {
    "b": 168,
    "g": 184,
    "r": 0,
  },
  Object {
    "b": 166,
    "g": 185,
    "r": 0,
  },
  Object {
    "b": 165,
    "g": 185,
    "r": 0,
  },
  Object {
    "b": 164,
    "g": 186,
    "r": 0,
  },
  Object {
    "b": 162,
    "g": 187,
    "r": 0,
  },
  Object {
    "b": 161,
    "g": 188,
    "r": 0,
  },
  Object {
    "b": 160,
    "g": 189,
    "r": 0,
  },
  Object {
    "b": 158,
    "g": 190,
    "r": 0,
  },
  Object {
    "b": 157,
    "g": 191,
    "r": 0,
  },
  Object {
    "b": 156,
    "g": 191,
    "r": 0,
  },
  Object {
    "b": 154,
    "g": 192,
    "r": 0,
  },
  Object {
    "b": 153,
    "g": 193,
    "r": 0,
  },
  Object {
    "b": 152,
    "g": 194,
    "r": 0,
  },
  Object {
    "b": 150,
    "g": 195,
    "r": 0,
  },
  Object {
    "b": 149,
    "g": 196,
    "r": 0,
  },
  Object {
    "b": 148,
    "g": 196,
    "r": 0,
  },
  Object {
    "b": 146,
    "g": 197,
    "r": 0,
  },
  Object {
    "b": 145,
    "g": 198,
    "r": 0,
  },
  Object {
    "b": 143,
    "g": 199,
    "r": 0,
  },
  Object {
    "b": 142,
    "g": 200,
    "r": 0,
  },
  Object {
    "b": 141,
    "g": 200,
    "r": 0,
  },
  Object {
    "b": 139,
    "g": 201,
    "r": 0,
  },
  Object {
    "b": 138,
    "g": 202,
    "r": 0,
  },
  Object {
    "b": 136,
    "g": 203,
    "r": 0,
  },
  Object {
    "b": 135,
    "g": 204,
    "r": 0,
  },
  Object {
    "b": 134,
    "g": 204,
    "r": 0,
  },
  Object {
    "b": 132,
    "g": 205,
    "r": 0,
  },
  Object {
    "b": 131,
    "g": 206,
    "r": 0,
  },
  Object {
    "b": 129,
    "g": 207,
    "r": 0,
  },
  Object {
    "b": 128,
    "g": 208,
    "r": 0,
  },
  Object {
    "b": 127,
    "g": 208,
    "r": 0,
  },
  Object {
    "b": 125,
    "g": 209,
    "r": 0,
  },
  Object {
    "b": 124,
    "g": 210,
    "r": 0,
  },
  Object {
    "b": 122,
    "g": 211,
    "r": 0,
  },
  Object {
    "b": 121,
    "g": 211,
    "r": 0,
  },
  Object {
    "b": 119,
    "g": 212,
    "r": 0,
  },
  Object {
    "b": 118,
    "g": 213,
    "r": 0,
  },
  Object {
    "b": 116,
    "g": 214,
    "r": 0,
  },
  Object {
    "b": 115,
    "g": 214,
    "r": 0,
  },
  Object {
    "b": 114,
    "g": 215,
    "r": 0,
  },
  Object {
    "b": 112,
    "g": 216,
    "r": 0,
  },
  Object {
    "b": 111,
    "g": 217,
    "r": 0,
  },
  Object {
    "b": 109,
    "g": 217,
    "r": 0,
  },
  Object {
    "b": 108,
    "g": 218,
    "r": 0,
  },
  Object {
    "b": 106,
    "g": 219,
    "r": 0,
  },
  Object {
    "b": 105,
    "g": 220,
    "r": 0,
  },
  Object {
    "b": 103,
    "g": 220,
    "r": 0,
  },
  Object {
    "b": 102,
    "g": 221,
    "r": 0,
  },
  Object {
    "b": 101,
    "g": 222,
    "r": 0,
  },
  Object {
    "b": 99,
    "g": 222,
    "r": 0,
  },
  Object {
    "b": 98,
    "g": 223,
    "r": 0,
  },
  Object {
    "b": 96,
    "g": 224,
    "r": 0,
  },
  Object {
    "b": 95,
    "g": 224,
    "r": 0,
  },
  Object {
    "b": 93,
    "g": 225,
    "r": 0,
  },
  Object {
    "b": 92,
    "g": 226,
    "r": 0,
  },
  Object {
    "b": 90,
    "g": 226,
    "r": 22,
  },
  Object {
    "b": 89,
    "g": 227,
    "r": 37,
  },
  Object {
    "b": 88,
    "g": 228,
    "r": 47,
  },
  Object {
    "b": 86,
    "g": 228,
    "r": 56,
  },
  Object {
    "b": 85,
    "g": 229,
    "r": 63,
  },
  Object {
    "b": 83,
    "g": 229,
    "r": 70,
  },
  Object {
    "b": 82,
    "g": 230,
    "r": 76,
  },
  Object {
    "b": 80,
    "g": 231,
    "r": 82,
  },
  Object {
    "b": 79,
    "g": 231,
    "r": 87,
  },
  Object {
    "b": 78,
    "g": 232,
    "r": 93,
  },
  Object {
    "b": 76,
    "g": 232,
    "r": 98,
  },
  Object {
    "b": 75,
    "g": 233,
    "r": 102,
  },
  Object {
    "b": 73,
    "g": 234,
    "r": 107,
  },
  Object {
    "b": 72,
    "g": 234,
    "r": 111,
  },
  Object {
    "b": 70,
    "g": 235,
    "r": 116,
  },
  Object {
    "b": 69,
    "g": 235,
    "r": 120,
  },
  Object {
    "b": 68,
    "g": 236,
    "r": 124,
  },
  Object {
    "b": 66,
    "g": 236,
    "r": 128,
  },
  Object {
    "b": 65,
    "g": 237,
    "r": 132,
  },
  Object {
    "b": 63,
    "g": 237,
    "r": 136,
  },
  Object {
    "b": 62,
    "g": 238,
    "r": 140,
  },
  Object {
    "b": 61,
    "g": 238,
    "r": 144,
  },
  Object {
    "b": 59,
    "g": 239,
    "r": 148,
  },
  Object {
    "b": 58,
    "g": 239,
    "r": 151,
  },
  Object {
    "b": 57,
    "g": 240,
    "r": 155,
  },
  Object {
    "b": 55,
    "g": 240,
    "r": 159,
  },
  Object {
    "b": 54,
    "g": 241,
    "r": 162,
  },
  Object {
    "b": 53,
    "g": 241,
    "r": 166,
  },
  Object {
    "b": 51,
    "g": 242,
    "r": 169,
  },
  Object {
    "b": 50,
    "g": 242,
    "r": 173,
  },
  Object {
    "b": 49,
    "g": 243,
    "r": 176,
  },
  Object {
    "b": 48,
    "g": 243,
    "r": 180,
  },
  Object {
    "b": 46,
    "g": 243,
    "r": 183,
  },
  Object {
    "b": 45,
    "g": 244,
    "r": 187,
  },
  Object {
    "b": 44,
    "g": 244,
    "r": 190,
  },
  Object {
    "b": 43,
    "g": 245,
    "r": 194,
  },
  Object {
    "b": 42,
    "g": 245,
    "r": 197,
  },
  Object {
    "b": 41,
    "g": 245,
    "r": 200,
  },
  Object {
    "b": 40,
    "g": 246,
    "r": 204,
  },
  Object {
    "b": 39,
    "g": 246,
    "r": 207,
  },
  Object {
    "b": 38,
    "g": 246,
    "r": 210,
  },
  Object {
    "b": 37,
    "g": 247,
    "r": 214,
  },
  Object {
    "b": 36,
    "g": 247,
    "r": 217,
  },
  Object {
    "b": 36,
    "g": 247,
    "r": 220,
  },
  Object {
    "b": 35,
    "g": 248,
    "r": 224,
  },
  Object {
    "b": 34,
    "g": 248,
    "r": 227,
  },
  Object {
    "b": 34,
    "g": 248,
    "r": 230,
  },
  Object {
    "b": 34,
    "g": 248,
    "r": 233,
  },
  Object {
    "b": 33,
    "g": 249,
    "r": 237,
  },
  Object {
    "b": 33,
    "g": 249,
    "r": 240,
  },
]
`;

exports[`ramp viridis 1`] = `
Array [
  Object {
    "b": 84,
    "g": 1,
    "r": 68,
  },
  Object {
    "b": 86,
    "g": 3,
    "r": 68,
  },
  Object {
    "b": 87,
    "g": 5,
    "r": 67,
  },
  Object {
    "b": 89,
    "g": 7,
    "r": 67,
  },
  Object {
    "b": 91,
    "g": 9,
    "r": 66,
  },
  Object {
    "b": 93,
    "g": 12,
    "r": 65,
  },
  Object {
    "b": 94,
    "g": 14,
    "r": 65,
  },
  Object {
    "b": 96,
    "g": 16,
    "r": 64,
  },
  Object {
    "b": 98,
    "g": 17,
    "r": 63,
  },
  Object {
    "b": 100,
    "g": 19,
    "r": 62,
  },
  Object {
    "b": 101,
    "g": 21,
    "r": 62,
  },
  Object {
    "b": 103,
    "g": 23,
    "r": 61,
  },
  Object {
    "b": 105,
    "g": 24,
    "r": 60,
  },
  Object {
    "b": 107,
    "g": 26,
    "r": 59,
  },
  Object {
    "b": 108,
    "g": 27,
    "r": 57,
  },
  Object {
    "b": 110,
    "g": 29,
    "r": 56,
  },
  Object {
    "b": 112,
    "g": 30,
    "r": 55,
  },
  Object {
    "b": 113,
    "g": 32,
    "r": 53,
  },
  Object {
    "b": 115,
    "g": 33,
    "r": 52,
  },
  Object {
    "b": 117,
    "g": 34,
    "r": 50,
  },
  Object {
    "b": 118,
    "g": 36,
    "r": 49,
  },
  Object {
    "b": 120,
    "g": 37,
    "r": 47,
  },
  Object {
    "b": 122,
    "g": 39,
    "r": 45,
  },
  Object {
    "b": 123,
    "g": 40,
    "r": 43,
  },
  Object {
    "b": 125,
    "g": 41,
    "r": 40,
  },
  Object {
    "b": 126,
    "g": 42,
    "r": 38,
  },
  Object {
    "b": 128,
    "g": 44,
    "r": 35,
  },
  Object {
    "b": 130,
    "g": 45,
    "r": 32,
  },
  Object {
    "b": 131,
    "g": 46,
    "r": 28,
  },
  Object {
    "b": 133,
    "g": 48,
    "r": 24,
  },
  Object {
    "b": 134,
    "g": 49,
    "r": 18,
  },
  Object {
    "b": 136,
    "g": 50,
    "r": 11,
  },
  Object {
    "b": 137,
    "g": 51,
    "r": 2,
  },
  Object {
    "b": 139,
    "g": 53,
    "r": 0,
  },
  Object {
    "b": 140,
    "g": 54,
    "r": 0,
  },
  Object {
    "b": 142,
    "g": 55,
    "r": 0,
  },
  Object {
    "b": 143,
    "g": 56,
    "r": 0,
  },
  Object {
    "b": 145,
    "g": 58,
    "r": 0,
  },
  Object {
    "b": 146,
    "g": 59,
    "r": 0,
  },
  Object {
    "b": 148,
    "g": 60,
    "r": 0,
  },
  Object {
    "b": 149,
    "g": 61,
    "r": 0,
  },
  Object {
    "b": 150,
    "g": 62,
    "r": 0,
  },
  Object {
    "b": 152,
    "g": 64,
    "r": 0,
  },
  Object {
    "b": 153,
    "g": 65,
    "r": 0,
  },
  Object {
    "b": 154,
    "g": 66,
    "r": 0,
  },
  Object {
    "b": 156,
    "g": 67,
    "r": 0,
  },
  Object {
    "b": 157,
    "g": 68,
    "r": 0,
  },
  Object {
    "b": 158,
    "g": 69,
    "r": 0,
  },
  Object {
    "b": 160,
    "g": 71,
    "r": 0,
  },
  Object {
    "b": 161,
    "g": 72,
    "r": 0,
  },
  Object {
    "b": 162,
    "g": 73,
    "r": 0,
  },
  Object {
    "b": 163,
    "g": 74,
    "r": 0,
  },
  Object {
    "b": 164,
    "g": 75,
    "r": 0,
  },
  Object {
    "b": 166,
    "g": 76,
    "r": 0,
  },
  Object {
    "b": 167,
    "g": 78,
    "r": 0,
  },
  Object {
    "b": 168,
    "g": 79,
    "r": 0,
  },
  Object {
    "b": 169,
    "g": 80,
    "r": 0,
  },
  Object {
    "b": 170,
    "g": 81,
    "r": 0,
  },
  Object {
    "b": 171,
    "g": 82,
    "r": 0,
  },
  Object {
    "b": 172,
    "g": 83,
    "r": 0,
  },
  Object {
    "b": 173,
    "g": 84,
    "r": 0,
  },
  Object {
    "b": 174,
    "g": 85,
    "r": 0,
  },
  Object {
    "b": 175,
    "g": 86,
    "r": 0,
  },
  Object {
    "b": 176,
    "g": 88,
    "r": 0,
  },
  Object {
    "b": 177,
    "g": 89,
    "r": 0,
  },
  Object {
    "b": 178,
    "g": 90,
    "r": 0,
  },
  Object {
    "b": 179,
    "g": 91,
    "r": 0,
  },
  Object {
    "b": 179,
    "g": 92,
    "r": 0,
  },
  Object {
    "b": 180,
    "g": 93,
    "r": 0,
  },
  Object {
    "b": 181,
    "g": 94,
    "r": 0,
  },
  Object {
    "b": 182,
    "g": 95,
    "r": 0,
  },
  Object {
    "b": 183,
    "g": 96,
    "r": 0,
  },
  Object {
    "b": 183,
    "g": 97,
    "r": 0,
  },
  Object {
    "b": 184,
    "g": 98,
    "r": 0,
  },
  Object {
    "b": 185,
    "g": 100,
    "r": 0,
  },
  Object {
    "b": 185,
    "g": 101,
    "r": 0,
  },
  Object {
    "b": 186,
    "g": 102,
    "r": 0,
  },
  Object {
    "b": 187,
    "g": 103,
    "r": 0,
  },
  Object {
    "b": 187,
    "g": 104,
    "r": 0,
  },
  Object {
    "b": 188,
    "g": 105,
    "r": 0,
  },
  Object {
    "b": 188,
    "g": 106,
    "r": 0,
  },
  Object {
    "b": 189,
    "g": 107,
    "r": 0,
  },
  Object {
    "b": 189,
    "g": 108,
    "r": 0,
  },
  Object {
    "b": 190,
    "g": 109,
    "r": 0,
  },
  Object {
    "b": 190,
    "g": 110,
    "r": 0,
  },
  Object {
    "b": 190,
    "g": 111,
    "r": 0,
  },
  Object {
    "b": 191,
    "g": 112,
    "r": 0,
  },
  Object {
    "b": 191,
    "g": 113,
    "r": 0,
  },
  Object {
    "b": 191,
    "g": 114,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 115,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 116,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 117,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 118,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 119,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 120,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 121,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 122,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 123,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 124,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 125,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 126,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 127,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 128,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 129,
    "r": 0,
  },
  Object {
    "b": 193,
    "g": 130,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 131,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 132,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 133,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 134,
    "r": 0,
  },
  Object {
    "b": 192,
    "g": 135,
    "r": 0,
  },
  Object {
    "b": 191,
    "g": 136,
    "r": 0,
  },
  Object {
    "b": 191,
    "g": 137,
    "r": 0,
  },
  Object {
    "b": 191,
    "g": 138,
    "r": 0,
  },
  Object {
    "b": 190,
    "g": 139,
    "r": 0,
  },
  Object {
    "b": 190,
    "g": 140,
    "r": 0,
  },
  Object {
    "b": 190,
    "g": 141,
    "r": 0,
  },
  Object {
    "b": 189,
    "g": 142,
    "r": 0,
  },
  Object {
    "b": 189,
    "g": 142,
    "r": 0,
  },
  Object {
    "b": 188,
    "g": 143,
    "r": 0,
  },
  Object {
    "b": 188,
    "g": 144,
    "r": 0,
  },
  Object {
    "b": 187,
    "g": 145,
    "r": 0,
  },
  Object {
    "b": 187,
    "g": 146,
    "r": 0,
  },
  Object {
    "b": 186,
    "g": 147,
    "r": 0,
  },
  Object {
    "b": 186,
    "g": 148,
    "r": 0,
  },
  Object {
    "b": 185,
    "g": 149,
    "r": 0,
  },
  Object {
    "b": 184,
    "g": 150,
    "r": 0,
  },
  Object {
    "b": 184,
    "g": 151,
    "r": 0,
  },
  Object {
    "b": 183,
    "g": 152,
    "r": 0,
  },
  Object {
    "b": 182,
    "g": 153,
    "r": 0,
  },
  Object {
    "b": 182,
    "g": 154,
    "r": 0,
  },
  Object {
    "b": 181,
    "g": 154,
    "r": 0,
  },
  Object {
    "b": 180,
    "g": 155,
    "r": 0,
  },
  Object {
    "b": 179,
    "g": 156,
    "r": 0,
  },
  Object {
    "b": 179,
    "g": 157,
    "r": 0,
  },
  Object {
    "b": 178,
    "g": 158,
    "r": 0,
  },
  Object {
    "b": 177,
    "g": 159,
    "r": 0,
  },
  Object {
    "b": 176,
    "g": 160,
    "r": 0,
  },
  Object {
    "b": 175,
    "g": 161,
    "r": 0,
  },
  Object {
    "b": 174,
    "g": 162,
    "r": 0,
  },
  Object {
    "b": 173,
    "g": 163,
    "r": 0,
  },
  Object {
    "b": 172,
    "g": 163,
    "r": 0,
  },
  Object {
    "b": 172,
    "g": 164,
    "r": 0,
  },
  Object {
    "b": 171,
    "g": 165,
    "r": 0,
  },
  Object {
    "b": 170,
    "g": 166,
    "r": 0,
  },
  Object {
    "b": 169,
    "g": 167,
    "r": 0,
  },
  Object {
    "b": 168,
    "g": 168,
    "r": 0,
  },
  Object {
    "b": 167,
    "g": 169,
    "r": 0,
  },
  Object {
    "b": 166,
    "g": 170,
    "r": 0,
  },
  Object {
    "b": 164,
    "g": 170,
    "r": 0,
  },
  Object {
    "b": 163,
    "g": 171,
    "r": 0,
  },
  Object {
    "b": 162,
    "g": 172,
    "r": 0,
  },
  Object {
    "b": 161,
    "g": 173,
    "r": 0,
  },
  Object {
    "b": 160,
    "g": 174,
    "r": 0,
  },
  Object {
    "b": 159,
    "g": 175,
    "r": 0,
  },
  Object {
    "b": 158,
    "g": 176,
    "r": 0,
  },
  Object {
    "b": 157,
    "g": 176,
    "r": 0,
  },
  Object {
    "b": 155,
    "g": 177,
    "r": 0,
  },
  Object {
    "b": 154,
    "g": 178,
    "r": 0,
  },
  Object {
    "b": 153,
    "g": 179,
    "r": 0,
  },
  Object {
    "b": 152,
    "g": 180,
    "r": 0,
  },
  Object {
    "b": 151,
    "g": 181,
    "r": 0,
  },
  Object {
    "b": 149,
    "g": 181,
    "r": 0,
  },
  Object {
    "b": 148,
    "g": 182,
    "r": 0,
  },
  Object {
    "b": 147,
    "g": 183,
    "r": 0,
  },
  Object {
    "b": 146,
    "g": 184,
    "r": 0,
  },
  Object {
    "b": 144,
    "g": 185,
    "r": 0,
  },
  Object {
    "b": 143,
    "g": 185,
    "r": 0,
  },
  Object {
    "b": 142,
    "g": 186,
    "r": 0,
  },
  Object {
    "b": 140,
    "g": 187,
    "r": 0,
  },
  Object {
    "b": 139,
    "g": 188,
    "r": 0,
  },
  Object {
    "b": 138,
    "g": 189,
    "r": 0,
  },
  Object {
    "b": 137,
    "g": 189,
    "r": 0,
  },
  Object {
    "b": 135,
    "g": 190,
    "r": 0,
  },
  Object {
    "b": 134,
    "g": 191,
    "r": 0,
  },
  Object {
    "b": 132,
    "g": 192,
    "r": 0,
  },
  Object {
    "b": 131,
    "g": 192,
    "r": 0,
  },
  Object {
    "b": 130,
    "g": 193,
    "r": 0,
  },
  Object {
    "b": 128,
    "g": 194,
    "r": 0,
  },
  Object {
    "b": 127,
    "g": 195,
    "r": 0,
  },
  Object {
    "b": 126,
    "g": 195,
    "r": 0,
  },
  Object {
    "b": 124,
    "g": 196,
    "r": 0,
  },
  Object {
    "b": 123,
    "g": 197,
    "r": 0,
  },
  Object {
    "b": 121,
    "g": 198,
    "r": 0,
  },
  Object {
    "b": 120,
    "g": 198,
    "r": 0,
  },
  Object {
    "b": 119,
    "g": 199,
    "r": 0,
  },
  Object {
    "b": 117,
    "g": 200,
    "r": 0,
  },
  Object {
    "b": 116,
    "g": 201,
    "r": 0,
  },
  Object {
    "b": 114,
    "g": 201,
    "r": 0,
  },
  Object {
    "b": 113,
    "g": 202,
    "r": 0,
  },
  Object {
    "b": 112,
    "g": 203,
    "r": 0,
  },
  Object {
    "b": 110,
    "g": 203,
    "r": 0,
  },
  Object {
    "b": 109,
    "g": 204,
    "r": 0,
  },
  Object {
    "b": 107,
    "g": 205,
    "r": 0,
  },
  Object {
    "b": 106,
    "g": 205,
    "r": 0,
  },
  Object {
    "b": 104,
    "g": 206,
    "r": 0,
  },
  Object {
    "b": 103,
    "g": 207,
    "r": 0,
  },
  Object {
    "b": 101,
    "g": 207,
    "r": 0,
  },
  Object {
    "b": 100,
    "g": 208,
    "r": 1,
  },
  Object {
    "b": 99,
    "g": 209,
    "r": 23,
  },
  Object {
    "b": 97,
    "g": 209,
    "r": 35,
  },
  Object {
    "b": 96,
    "g": 210,
    "r": 44,
  },
  Object {
    "b": 94,
    "g": 211,
    "r": 52,
  },
  Object {
    "b": 93,
    "g": 211,
    "r": 59,
  },
  Object {
    "b": 91,
    "g": 212,
    "r": 65,
  },
  Object {
    "b": 90,
    "g": 212,
    "r": 71,
  },
  Object {
    "b": 88,
    "g": 213,
    "r": 76,
  },
  Object {
    "b": 87,
    "g": 214,
    "r": 81,
  },
  Object {
    "b": 86,
    "g": 214,
    "r": 86,
  },
  Object {
    "b": 84,
    "g": 215,
    "r": 90,
  },
  Object {
    "b": 83,
    "g": 215,
    "r": 95,
  },
  Object {
    "b": 81,
    "g": 216,
    "r": 99,
  },
  Object {
    "b": 80,
    "g": 216,
    "r": 103,
  },
  Object {
    "b": 78,
    "g": 217,
    "r": 107,
  },
  Object {
    "b": 77,
    "g": 217,
    "r": 111,
  },
  Object {
    "b": 75,
    "g": 218,
    "r": 115,
  },
  Object {
    "b": 74,
    "g": 218,
    "r": 119,
  },
  Object {
    "b": 73,
    "g": 219,
    "r": 123,
  },
  Object {
    "b": 71,
    "g": 219,
    "r": 127,
  },
  Object {
    "b": 70,
    "g": 220,
    "r": 130,
  },
  Object {
    "b": 68,
    "g": 220,
    "r": 134,
  },
  Object {
    "b": 67,
    "g": 221,
    "r": 138,
  },
  Object {
    "b": 66,
    "g": 221,
    "r": 141,
  },
  Object {
    "b": 64,
    "g": 222,
    "r": 145,
  },
  Object {
    "b": 63,
    "g": 222,
    "r": 148,
  },
  Object {
    "b": 62,
    "g": 223,
    "r": 152,
  },
  Object {
    "b": 60,
    "g": 223,
    "r": 155,
  },
  Object {
    "b": 59,
    "g": 224,
    "r": 158,
  },
  Object {
    "b": 58,
    "g": 224,
    "r": 162,
  },
  Object {
    "b": 56,
    "g": 224,
    "r": 165,
  },
  Object {
    "b": 55,
    "g": 225,
    "r": 169,
  },
  Object {
    "b": 54,
    "g": 225,
    "r": 172,
  },
  Object {
    "b": 52,
    "g": 225,
    "r": 175,
  },
  Object {
    "b": 51,
    "g": 226,
    "r": 179,
  },
  Object {
    "b": 50,
    "g": 226,
    "r": 182,
  },
  Object {
    "b": 49,
    "g": 227,
    "r": 185,
  },
  Object {
    "b": 48,
    "g": 227,
    "r": 188,
  },
  Object {
    "b": 47,
    "g": 227,
    "r": 192,
  },
  Object {
    "b": 46,
    "g": 227,
    "r": 195,
  },
  Object {
    "b": 44,
    "g": 228,
    "r": 198,
  },
  Object {
    "b": 43,
    "g": 228,
    "r": 202,
  },
  Object {
    "b": 43,
    "g": 228,
    "r": 205,
  },
  Object {
    "b": 42,
    "g": 229,
    "r": 208,
  },
  Object {
    "b": 41,
    "g": 229,
    "r": 211,
  },
  Object {
    "b": 40,
    "g": 229,
    "r": 214,
  },
  Object {
    "b": 39,
    "g": 229,
    "r": 218,
  },
  Object {
    "b": 39,
    "g": 229,
    "r": 221,
  },
  Object {
    "b": 38,
    "g": 230,
    "r": 224,
  },
  Object {
    "b": 38,
    "g": 230,
    "r": 227,
  },
  Object {
    "b": 37,
    "g": 230,
    "r": 231,
  },
  Object {
    "b": 37,
    "g": 230,
    "r": 234,
  },
  Object {
    "b": 37,
    "g": 230,
    "r": 237,
  },
  Object {
    "b": 37,
    "g": 231,
    "r": 240,
  },
  Object {
    "b": 37,
    "g": 231,
    "r": 243,
  },
  Object {
    "b": 37,
    "g": 231,
    "r": 247,
  },
  Object {
    "b": 37,
    "g": 231,
    "r": 250,
  },
  Object {
    "b": 37,
    "g": 231,
    "r": 253,
  },
]
`;

exports[`slerp 0 1`] = `
Object {
  "C": 104.57551843993618,
  "L": 53.23288178584245,
  "h": 40.00015790646365,
}
`;

exports[`slerp 50 1`] = `
Object {
  "C": 119.19569022806556,
  "L": 42.76773422654597,
  "h": 173.1436797353954,
}
`;

exports[`slerp 100 1`] = `
Object {
  "C": 133.81586201619493,
  "L": 32.302586667249486,
  "h": 306.2872015643272,
}
`;
